GUI convertor done

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,10 @@ jar {
     manifest {
         attributes('Main-Class': 'com.selipasha.convertorapp.Convertor')
     }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 repositories {
